changed the values section to ensure the vlaues align with the vision of Kejaprime

--- a/frontend/src/styles/Value.css
+++ b/frontend/src/styles/Value.css
@@ -1,4 +1,4 @@
 .accordion-header .accordion-button {
     font-weight: bold;
-    color:orange;
+    color: darkorange;
 }
